--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,7 @@
-version: "3.8"
+version: '3.8'
 services:
-  # In Docker
-  # - TEST_POSTGRES_URI=postgres://prisma:prisma@postgres/
-  # Outside Docker
-  # - TEST_POSTGRES_URI=postgres://prisma:prisma@localhost:5432/
-
   postgres:
-    container_name: "reddit"
+    container_name: 'reddit'
     image: postgres:10.3
     restart: always
     environment:
@@ -15,7 +10,7 @@ services:
     volumes:
       - reddit:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - '5432:5432'
 
 volumes:
   reddit:
