--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
+version: "3.8"
 services:
   postgres:
-    container_name: 'reddit'
+    container_name: reddit-db
     image: postgres:10.3
     restart: always
     environment:
@@ -10,7 +10,18 @@ services:
     volumes:
       - reddit:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - "5432:5432"
+
+  cache:
+    container_name: redis-cache
+    image: redis:6.0.6
+    restart: always
+    command: redis-server --appendonly yes
+    volumes:
+      - reddit-cache:/data
+    ports:
+      - "6379:6379"
 
 volumes:
   reddit:
+  reddit-cache:
